# python-oneviewclient

./: .coveragerc  .gitreview  .testr.conf  CONTRIBUTING.rst  HACKING.rst  README.md  README.rst  groups  lower-constraints.txt  openstack-common.conf  project.config  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
doc/: reaquirements
doc/source/: conf.py  index.rst  installation.rst  usage.rst
oneview_client/: __init__.py  auditing.py  client.py  driver_oneview_exceptions.py  exceptions.py  ilo_utils.py  managers.py  models.py  oneview_api.py  oneview_client.py  oneview_objects.py  states.py  utils.py
oneview_client/models/: enclosure.py  enclosure_group.py  oneview_object.py  server_hardware.py  server_hardware_type.py  server_profile.py  server_profile_template.py
oneview_client/tests/: fixtures.py  test_exceptions.py  test_ilo_utils.py  test_models.py  test_oneview_client.py  test_python-oneviewclient.py
oneview_client/tests/functional/: fixtures.py  test_oneview_client.py
oneview_client/tests/unit/: test_auditing.py  test_managers.py  test_models.py  test_oneview_client.py  test_utils.py
releasenotes/notes/: has-physical-mac-4d7cbb736c976a97.yaml
