[metadata]
name = python-oneviewclient
summary = Library to use OneView to provide nodes for Ironic
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4

[files]
packages =
    oneview_client

[compile_catalog]
directory = python-oneviewclient/locale
domain = python-oneviewclient

[update_catalog]
domain = python-oneviewclient
output_dir = python-oneviewclient/locale
input_file = python-oneviewclient/locale/python-oneviewclient.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = python-oneviewclient/locale/python-oneviewclient.pot
